--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 ### Basic Socket To-do List
 
-- [x] Self learning
+- [x] Finish my changes
+- [ ] Push my commits to GitHub
+- [ ] Open a pull request
 
 Function | Add | Remove | High-light
 :------------ | :-------------| :-------------| :-------------
